--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -4,7 +4,7 @@
     <title>Anesthesia - Cadastro de Pacientes</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/css/materialize.min.css" media="screen,projection"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -50,12 +50,8 @@
     </div>
     <div class="row">
         <div class="input-field col s3">
-            <input id="city" th:field="*{city.name}" type="text">
+            <input id="city" th:field="*{city.name}" type="text" class="autocomplete">
             <label for="city">Cidade</label>
-        </div>
-        <div class="input-field col s2">
-            <input id="uf" th:field="*{city.uf}" type="text">
-            <label for="uf">Unidade Federativa</label>
         </div>
         <div class="input-field col s2">
             <input id="uf" th:field="*{city.uf}" type="text">
@@ -69,7 +65,7 @@
     <button class="waves-effect waves-light btn" type="submit">Salvar
         <i class="material-icons right">send</i>
     </button>
-    <a href="/patients" class="waves-effect waves-light btn">Voltar</a>
+    <a href="/patient" class="waves-effect waves-light btn">Voltar</a>
 </form>
 <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function () {
@@ -93,10 +89,23 @@
         }
         M.Datepicker.init(datePickerElements, datePickerOptions);
 
-        var elems = document.querySelectorAll('select');
-        M.FormSelect.init(elems, {});
+        var selectElements = document.querySelectorAll('select');
+        M.FormSelect.init(selectElements, {});
+        /*<![CDATA[*/
+        var cityOptions = /*[[${cityOptions}]]*/ [];
+        var ufOptions = /*[[${ufOptions}]]*/ [];
+        /*]]>*/
+        var cityAutocomplete = document.querySelector("#city");
+        M.Autocomplete.init(cityAutocomplete, {
+            data: cityOptions
+        });
+        var ufAutocomplete = document.querySelector("#uf");
+        M.Autocomplete.init(ufAutocomplete, {
+            data: ufOptions
+        });
+
     });
 </script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="/js/materialize.min.js"></script>
 </body>
 </html>
