--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -4,7 +4,7 @@
     <title>Anesthesia - Cadastro de Pacientes</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/css/materialize.min.css" media="screen,projection"/>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -18,7 +18,8 @@
         <th>Código</th>
         <th>Nome</th>
         <th>Sobrenome</th>
-        <th><a href="/patient" class="btn-floating btn-small waves-effect waves-light blue"><i class="material-icons">add</i></a>
+        <th><a href="/patient/new" class="btn-floating btn-small waves-effect waves-light blue"><i
+                class="material-icons">add</i></a>
         </th>
     </tr>
     </thead>
@@ -38,6 +39,6 @@
     </tr>
     </tbody>
 </table>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="/js/materialize.min.js"></script>
 </body>
 </html>
