--- a/src/main/resources/templates/patient.html
+++ b/src/main/resources/templates/patient.html
@@ -13,6 +13,7 @@
 <h2>Cadastro de Pacientes</h2>
 <th:block th:include="message"></th:block>
 <form class="container" action="#" th:action="@{/patient}" th:object="${patient}" method="post">
+    <input id="id" th:field="*{id}" type="hidden">
     <div class="row">
         <div class="input-field col s6">
             <input id="name" th:field="*{name}" type="text">
@@ -26,14 +27,15 @@
     <div class="row">
         <div class="input-field col s2">
             <select id="gender" th:field="*{gender}">
-                <option th:each="genderOption : ${genderOptions}" th:value="${genderOption}" th:text="${genderOption}">
+                <option th:each="genderOption : ${genderOptions}" th:value="${{genderOption}}"
+                        th:text="${genderOption}">
                 </option>
             </select>
             <label for="gender">Sexo</label>
         </div>
         <div class="input-field col s2">
-            <input id="birthday" th:field="*{birthday}" type="text" class="datepicker">
-            <label for="birthday">Data de Nascimento</label>
+            <!--<input id="birthday" th:field="*{birthday}" type="text" class="datepicker">-->
+            <!--<label for="birthday">Data de Nascimento</label>-->
         </div>
         <div class="input-field col s5">
             <input id="religion" th:field="*{religion}" type="text">
@@ -41,7 +43,7 @@
         </div>
         <div class="input-field col s3">
             <select id="civilState" th:field="*{civilState}">
-                <option th:each="civilStateOption : ${civilStateOptions}" th:value="${civilStateOption}"
+                <option th:each="civilStateOption : ${civilStateOptions}" th:value="${{civilStateOption}}"
                         th:text="${civilStateOption}">
                 </option>
             </select>
@@ -54,12 +56,49 @@
             <label for="city">Cidade</label>
         </div>
         <div class="input-field col s2">
-            <input id="uf" th:field="*{city.uf}" type="text">
+            <input id="uf" th:field="*{city.uf}" type="text" class="autocomplete">
             <label for="uf">Unidade Federativa</label>
+        </div>
+        <div class="input-field col s2">
+            <input id="postalCode" th:field="*{postalCode}" type="text">
+            <label for="postalCode">CEP</label>
+        </div>
+        <div class="input-field col s5">
+            <input id="address" th:field="*{address}" type="text">
+            <label for="address">Endereço</label>
+        </div>
+    </div>
+    <div class="row">
+        <div class="input-field col s2">
+            <input id="phoneNumber" th:field="*{phoneNumber}" type="text">
+            <label for="phoneNumber">Telefone fixo</label>
+        </div>
+        <div class="input-field col s2">
+            <input id="cellphoneNumber" th:field="*{cellphoneNumber}" type="text">
+            <label for="cellphoneNumber">Telefone celular</label>
+        </div>
+        <div class="input-field col s4">
+            <input id="email" th:field="*{email}" type="text">
+            <label for="email">Email</label>
         </div>
         <div class="input-field col s2">
             <input id="cpf" th:field="*{cpf}" type="text">
             <label for="cpf">CPF</label>
+        </div>
+        <div class="input-field col s2">
+            <input id="rg" th:field="*{rg}" type="text">
+            <label for="rg">RG</label>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s6">
+            <select multiple id="backgrounds" th:field="*{backgrounds}">
+                <option th:each="background : ${backgroundOptions}"
+                        th:value="${{background}}"
+                        th:text="${background}">Antecedente
+                </option>
+            </select>
+            <label for="backgrounds">Antecedentes</label>
         </div>
     </div>
     <button class="waves-effect waves-light btn" type="submit">Salvar
