Alteração dos nomes dos recursos HTML e correção do html de mensagem de erro

--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="card-panel red white-text">
-    <span th:text="${mensagem}"></span>
+    <span th:text="${message}"></span>
 </div>
 </body>
 </html>
