--- a/src/main/resources/templates/form_patient.html
+++ b/src/main/resources/templates/form_patient.html
@@ -1,150 +1,115 @@
-<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Anesthesia - Cadastro de Pacientes</title>
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-    <link type="text/css" rel="stylesheet" href="/css/materialize.min.css" media="screen,projection"/>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-</head>
-<body>
-<h1>Anesthesia</h1>
-<h2>Cadastro de Pacientes</h2>
-<th:block th:include="message"></th:block>
-<form class="container" action="#" th:action="@{/patient}" th:object="${patient}" method="post">
-    <input id="id" th:field="*{id}" type="hidden">
-    <div class="row">
-        <div class="input-field col s6">
-            <input id="name" th:field="*{name}" type="text">
-            <label for="name">Nome</label>
-        </div>
-        <div class="input-field col s6">
-            <input id="surname" th:field="*{surname}" type="text">
-            <label for="surname">Sobrenome</label>
+<div th:fragment="corpo">
+    <div class="container">
+        <div class="row">
+            <h2 class="center">Cadastro de Pacientes</h2>
+            <div class="row">
+                <nav>
+                    <div class="nav-wrapper blue darken-1">
+                        <div class="col s12">
+                            <a class="breadcrumb" th:href="@{/}">Home</a>
+                            <a class="breadcrumb">Cadastro de Pacientes</a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+            <th:block th:include="message"></th:block>
+            <form action="#" th:action="@{/patient}" th:object="${patient}" method="post">
+                <input id="id" th:field="*{id}" type="hidden">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <input id="name" th:field="*{name}" type="text">
+                        <label for="name">Nome</label>
+                    </div>
+                    <div class="input-field col s6">
+                        <input id="surname" th:field="*{surname}" type="text">
+                        <label for="surname">Sobrenome</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s2">
+                        <select id="gender" th:field="*{gender}">
+                            <option th:each="genderOption : ${genderOptions}" th:value="${{genderOption}}"
+                                    th:text="${genderOption}">
+                            </option>
+                        </select>
+                        <label for="gender">Sexo</label>
+                    </div>
+                    <div class="input-field col s2">
+                        <!--<input id="birthday" th:field="*{birthday}" type="text" class="datepicker">-->
+                        <!--<label for="birthday">Data de Nascimento</label>-->
+                    </div>
+                    <div class="input-field col s5">
+                        <input id="religion" th:field="*{religion}" type="text">
+                        <label for="religion">Religião</label>
+                    </div>
+                    <div class="input-field col s3">
+                        <select id="civilState" th:field="*{civilState}">
+                            <option th:each="civilStateOption : ${civilStateOptions}" th:value="${{civilStateOption}}"
+                                    th:text="${civilStateOption}">
+                            </option>
+                        </select>
+                        <label for="civilState">Estado Civil</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s3">
+                        <input id="city" th:field="*{city.name}" type="text" class="autocomplete">
+                        <label for="city">Cidade</label>
+                    </div>
+                    <div class="input-field col s2">
+                        <input id="uf" th:field="*{city.uf}" type="text" class="autocomplete">
+                        <label for="uf">Unidade Federativa</label>
+                    </div>
+                    <div class="input-field col s2">
+                        <input id="postalCode" th:field="*{postalCode}" type="text">
+                        <label for="postalCode">CEP</label>
+                    </div>
+                    <div class="input-field col s5">
+                        <input id="address" th:field="*{address}" type="text">
+                        <label for="address">Endereço</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="input-field col s2">
+                        <input id="phoneNumber" th:field="*{phoneNumber}" type="text">
+                        <label for="phoneNumber">Telefone fixo</label>
+                    </div>
+                    <div class="input-field col s2">
+                        <input id="cellphoneNumber" th:field="*{cellphoneNumber}" type="text">
+                        <label for="cellphoneNumber">Telefone celular</label>
+                    </div>
+                    <div class="input-field col s4">
+                        <input id="email" th:field="*{email}" type="text">
+                        <label for="email">Email</label>
+                    </div>
+                    <div class="input-field col s2">
+                        <input id="cpf" th:field="*{cpf}" type="text">
+                        <label for="cpf">CPF</label>
+                    </div>
+                    <div class="input-field col s2">
+                        <input id="rg" th:field="*{rg}" type="text">
+                        <label for="rg">RG</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s6">
+                        <select multiple id="backgrounds" th:field="*{backgrounds}">
+                            <option th:each="background : ${backgroundOptions}"
+                                    th:value="${{background}}"
+                                    th:text="${background}">Antecedente
+                            </option>
+                        </select>
+                        <label for="backgrounds">Antecedentes</label>
+                    </div>
+                </div>
+                <button class="waves-effect waves-light btn" type="submit">Salvar
+                    <i class="material-icons right">send</i>
+                </button>
+                <a href="/patient" class="waves-effect waves-light btn">Voltar</a>
+            </form>
         </div>
     </div>
-    <div class="row">
-        <div class="input-field col s2">
-            <select id="gender" th:field="*{gender}">
-                <option th:each="genderOption : ${genderOptions}" th:value="${{genderOption}}"
-                        th:text="${genderOption}">
-                </option>
-            </select>
-            <label for="gender">Sexo</label>
-        </div>
-        <div class="input-field col s2">
-            <!--<input id="birthday" th:field="*{birthday}" type="text" class="datepicker">-->
-            <!--<label for="birthday">Data de Nascimento</label>-->
-        </div>
-        <div class="input-field col s5">
-            <input id="religion" th:field="*{religion}" type="text">
-            <label for="religion">Religião</label>
-        </div>
-        <div class="input-field col s3">
-            <select id="civilState" th:field="*{civilState}">
-                <option th:each="civilStateOption : ${civilStateOptions}" th:value="${{civilStateOption}}"
-                        th:text="${civilStateOption}">
-                </option>
-            </select>
-            <label for="civilState">Estado Civil</label>
-        </div>
-    </div>
-    <div class="row">
-        <div class="input-field col s3">
-            <input id="city" th:field="*{city.name}" type="text" class="autocomplete">
-            <label for="city">Cidade</label>
-        </div>
-        <div class="input-field col s2">
-            <input id="uf" th:field="*{city.uf}" type="text" class="autocomplete">
-            <label for="uf">Unidade Federativa</label>
-        </div>
-        <div class="input-field col s2">
-            <input id="postalCode" th:field="*{postalCode}" type="text">
-            <label for="postalCode">CEP</label>
-        </div>
-        <div class="input-field col s5">
-            <input id="address" th:field="*{address}" type="text">
-            <label for="address">Endereço</label>
-        </div>
-    </div>
-    <div class="row">
-        <div class="input-field col s2">
-            <input id="phoneNumber" th:field="*{phoneNumber}" type="text">
-            <label for="phoneNumber">Telefone fixo</label>
-        </div>
-        <div class="input-field col s2">
-            <input id="cellphoneNumber" th:field="*{cellphoneNumber}" type="text">
-            <label for="cellphoneNumber">Telefone celular</label>
-        </div>
-        <div class="input-field col s4">
-            <input id="email" th:field="*{email}" type="text">
-            <label for="email">Email</label>
-        </div>
-        <div class="input-field col s2">
-            <input id="cpf" th:field="*{cpf}" type="text">
-            <label for="cpf">CPF</label>
-        </div>
-        <div class="input-field col s2">
-            <input id="rg" th:field="*{rg}" type="text">
-            <label for="rg">RG</label>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s6">
-            <select multiple id="backgrounds" th:field="*{backgrounds}">
-                <option th:each="background : ${backgroundOptions}"
-                        th:value="${{background}}"
-                        th:text="${background}">Antecedente
-                </option>
-            </select>
-            <label for="backgrounds">Antecedentes</label>
-        </div>
-    </div>
-    <button class="waves-effect waves-light btn" type="submit">Salvar
-        <i class="material-icons right">send</i>
-    </button>
-    <a href="/patient" class="waves-effect waves-light btn">Voltar</a>
-</form>
-<script type="text/javascript">
-    document.addEventListener('DOMContentLoaded', function () {
-        var datePickerElements = document.querySelectorAll('.datepicker');
-        var datePickerOptions = {
-            container: 'body',
-            showDaysInNextAndPreviousMonths: true,
-            format: "dd/mm/yyyy",
-            i18n: {
-                today: 'Hoje',
-                clear: 'Limpar',
-                done: 'Ok',
-                nextMonth: 'Próximo mês',
-                previousMonth: 'Mês anterior',
-                weekdaysAbbrev: ['D', 'S', 'T', 'Q', 'Q', 'S', 'S'],
-                weekdaysShort: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb'],
-                weekdays: ['Domingo', 'Segunda-Feira', 'Terça-Feira', 'Quarta-Feira', 'Quinta-Feira', 'Sexta-Feira', 'Sábado'],
-                monthsShort: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
-                months: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro']
-            }
-        }
-        M.Datepicker.init(datePickerElements, datePickerOptions);
-
-        var selectElements = document.querySelectorAll('select');
-        M.FormSelect.init(selectElements, {});
-        /*<![CDATA[*/
-        var cityOptions = /*[[${cityOptions}]]*/ [];
-        var ufOptions = /*[[${ufOptions}]]*/ [];
-        /*]]>*/
-        var cityAutocomplete = document.querySelector("#city");
-        M.Autocomplete.init(cityAutocomplete, {
-            data: cityOptions
-        });
-        var ufAutocomplete = document.querySelector("#uf");
-        M.Autocomplete.init(ufAutocomplete, {
-            data: ufOptions
-        });
-
-    });
-</script>
-<script type="text/javascript" src="/js/materialize.min.js"></script>
-</body>
+</div>
+<script th:src="@{/js/form_patient.js}"></script>
 </html>
