--- a/src/main/resources/templates/index_patient.html
+++ b/src/main/resources/templates/index_patient.html
@@ -1,44 +1,46 @@
-<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Anesthesia - Cadastro de Pacientes</title>
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-    <link type="text/css" rel="stylesheet" href="/css/materialize.min.css" media="screen,projection"/>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-</head>
-<body>
-<h1>Anesthesia</h1>
-<h2>Cadastro de Pacientes</h2>
-
-<table class="container">
-    <thead>
-    <tr>
-        <th>Código</th>
-        <th>Nome</th>
-        <th>Sobrenome</th>
-        <th><a href="/patient/new" class="btn-floating btn-small waves-effect waves-light blue"><i
-                class="material-icons">add</i></a>
-        </th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="patient : ${patients}">
-        <td><span th:text="${patient.id}"></span></td>
-        <td><span th:text="${patient.name}"></span></td>
-        <td><span th:text="${patient.surname}"></span></td>
-        <td>
-            <a class="btn-floating btn-small waves-effect waves-light blue"
-               th:href="${(#mvc.url('PC#deletePatient').arg(0, patient.id)).build()}"><i
-                    class="material-icons">delete</i></a>
-            <a class="btn-floating btn-small waves-effect waves-light blue"
-               th:href="${(#mvc.url('PC#editPatient').arg(0, patient.id)).build()}"><i
-                    class="material-icons">edit</i></a>
-        </td>
-    </tr>
-    </tbody>
-</table>
-<script type="text/javascript" src="/js/materialize.min.js"></script>
-</body>
+    <div th:fragment="corpo">
+    <div class="container">
+        <div class="row">
+            <h2 class="center">Cadastro de Pacientes</h2>
+            <div class="row">
+                <nav>
+                    <div class="nav-wrapper blue darken-1">
+                        <div class="col s12">
+                            <a class="breadcrumb" th:href="@{/}">Home</a>
+                            <a class="breadcrumb">Cadastro de Pacientes</a>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+            <table>
+                <thead>
+                <tr>
+                    <th>Código</th>
+                    <th>Nome</th>
+                    <th>Sobrenome</th>
+                    <th><a href="/patient/new" class="btn-floating btn-small waves-effect waves-light blue"><i
+                            class="material-icons">add</i></a>
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="patient : ${patients}">
+                    <td><span th:text="${patient.id}"></span></td>
+                    <td><span th:text="${patient.name}"></span></td>
+                    <td><span th:text="${patient.surname}"></span></td>
+                    <td>
+                        <a class="btn-floating btn-small waves-effect waves-light blue"
+                           th:href="${(#mvc.url('PC#deletePatient').arg(0, patient.id)).build()}"><i
+                                class="material-icons">delete</i></a>
+                        <a class="btn-floating btn-small waves-effect waves-light blue"
+                           th:href="${(#mvc.url('PC#editPatient').arg(0, patient.id)).build()}"><i
+                                class="material-icons">edit</i></a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 </html>
