--- a/src/main/resources/templates/index_patient.html
+++ b/src/main/resources/templates/index_patient.html
@@ -13,6 +13,26 @@
                     </div>
                 </nav>
             </div>
+            <div class="row">
+                <form method="get">
+                    <div class="input-field col s3">
+                        <input id="cpf" name="cpf" type="text">
+                        <label for="cpf">CPF</label>
+                    </div>
+                    <div class="input-field col s8">
+                        <input id="name" name="name" type="text">
+                        <label for="name">Nome</label>
+                    </div>
+                    <div class="col s1">
+                        <div class="row">
+                            <div class="col s6">
+                                <a href="/patient" class="btn-floating btn-large waves-effect waves-light blue"><i
+                                        class="material-icons">clear_all</i></a>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
             <table>
                 <thead>
                 <tr>
