--- a/src/main/resources/templates/index_doctor.html
+++ b/src/main/resources/templates/index_doctor.html
@@ -13,33 +13,40 @@
                     </div>
                 </nav>
             </div>
-            <table>
+            <table >
                 <thead>
-                <tr>
+                <tr >
                     <th>Código</th>
                     <th>CRM</th>
                     <th>Nome</th>
-                    <th><a href="" class="btn-floating btn-small waves-effect waves-light blue"><i
+                    <th><a href="/doctor/new" class="btn-floating btn-small waves-effect waves-light blue tooltipped"data-tooltip="Adicionar"><i
                             class="material-icons">add</i></a>
                     </th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr th:each="doctor : ${doctors}">
-                    <td><span th:text="${doctor.id}"></span></td>
-                    <td><span th:text="${doctor.CRM}"></span></td>
-                    <td><span th:text="${doctor.nome}"></span></td>
+                    <td th:text="${doctor.id}"><span></span></td>
+                    <td th:text="${doctor.CRM}"><span></span></td>
+                    <td th:text="${doctor.name}"><span></span></td>
                     <td>
-                        <!--<a class="btn-floating btn-small waves-effect waves-light blue"-->
-                        <!--th:href="${(#mvc.url('PC#deletePatient').arg(0, patient.id)).build()}"><i-->
-                        <!--class="material-icons">delete</i></a>-->
-                        <!--<a class="btn-floating btn-small waves-effect waves-light blue"-->
-                        <!--th:href="${(#mvc.url('PC#editPatient').arg(0, patient.id)).build()}"><i-->
-                        <!--class="material-icons">edit</i></a>-->
+                        <a class="btn-floating btn-small waves-effect waves-light blue tooltipped"
+                           th:href="${(#mvc.url('DC#editDoctor').arg(0, doctor.id)).build()}" data-tooltip="Editar"><i class="material-icons">edit</i></a>
+                        <a class="btn-floating btn-small waves-effect waves-light blue delete tooltipped"
+                           th:data-url="${(#mvc.url('DC#deleteDoctor').arg(0, doctor.id)).build()}" data-tooltip="Excluir"><i class="material-icons">delete</i></a>
                     </td>
                 </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+    <div id="confirm_dialog" class="modal">
+        <div class="modal-content">
+            <h4>Deseja Realmente Excluir o Registro?</h4>
+        </div>
+        <div class="modal-footer">
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Confirmar</a>
+            <a href="#!" class="modal-close waves-effect waves-green btn-flat">Cancelar</a>
         </div>
     </div>
 </div>
