Implementação do campo de data de nascimento do paciente.

--- a/src/main/resources/templates/form_patient.html
+++ b/src/main/resources/templates/form_patient.html
@@ -36,8 +36,8 @@
                         <label for="gender">Sexo</label>
                     </div>
                     <div class="input-field col s2">
-                        <!--<input id="birthday" th:field="*{birthday}" type="text" class="datepicker">-->
-                        <!--<label for="birthday">Data de Nascimento</label>-->
+                        <input id="birthday" th:field="*{birthday}" type="text" class="datepicker">
+                        <label for="birthday">Data de Nascimento</label>
                     </div>
                     <div class="input-field col s5">
                         <input id="religion" th:field="*{religion}" type="text">
