--- a/src/main/resources/templates/index_patient.html
+++ b/src/main/resources/templates/index_patient.html
@@ -56,6 +56,9 @@
                         <a class="btn-floating btn-small waves-effect waves-light blue"
                            th:href="${(#mvc.url('PC#editPatient').arg(0, patient.id)).build()}"><i
                                 class="material-icons">edit</i></a>
+                        <a class="btn-floating btn-small waves-effect waves-light blue"
+                           th:href="${'/report/patient-registry/' + patient.id}"><i
+                                class="material-icons">local_printshop</i></a>
                     </td>
                 </tr>
                 </tbody>
