Adição de botão para selecionar o filtro da consulta de pacientes

--- a/src/main/resources/templates/index_patient.html
+++ b/src/main/resources/templates/index_patient.html
@@ -29,6 +29,10 @@
                                 <a href="/patient" class="btn-floating btn-large waves-effect waves-light blue"><i
                                         class="material-icons">clear_all</i></a>
                             </div>
+                            <div class="col s6">
+                                <button type="submit" class="btn-floating btn-large waves-effect waves-light blue"><i
+                                        class="material-icons">done</i></button>
+                            </div>
                         </div>
                     </div>
                 </form>
