--- a/src/main/resources/templates/form_patient.html
+++ b/src/main/resources/templates/form_patient.html
@@ -92,6 +92,56 @@
                         <label for="rg">RG</label>
                     </div>
                 </div>
+                <div class="row">
+                    <table class="col s6">
+                        <thead>
+                        <tr>
+                            <th>Antecendente</th>
+                            <th>&nbsp;</th>
+                            <th><a href="/background/new" class="btn-floating btn-small waves-effect waves-light blue"><i
+                                    class="material-icons">add</i></a>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="background : ${backgrounds}">
+                            <td>
+                                <p>
+                                    <label>
+                                        <input type="checkbox" th:value="${background.id}" class="filled-in" />
+                                        <span th:text="${background.name}"></span>
+                                    </label>
+                                </p>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                    <table class="col s6">
+                        <thead>
+                        <tr>
+                            <th>Medicamentos</th>
+                            <th>&nbsp;</th>
+                            <th><a href="/medicine/new" class="btn-floating btn-small waves-effect waves-light blue"><i
+                                    class="material-icons">add</i></a>
+                            </th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="medicine : ${medicines}">
+                            <td>
+                                <p>
+                                    <label>
+                                        <input type="checkbox" th:value="${medicine.id}" class="filled-in" />
+                                        <span th:text="${medicine.name}"></span>
+                                    </label>
+                                </p>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+
                 <button class="waves-effect waves-light btn" type="submit">Salvar
                     <i class="material-icons right">send</i>
                 </button>
