--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,32 +23,18 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="row">-->
-                <!--<div class="col s12 m6">-->
-                    <!--<div class="card red darken-1">-->
-                        <!--<div class="card-content white-text">-->
-                            <!--<span class="card-title">Exercícios</span>-->
-                        <!--</div>-->
-                        <!--<div class="card-action">-->
-                            <!--@can('Exercicios')-->
-                            <!--<a href="{{route('site.exercicios')}}">Clique aqui</a>-->
-                            <!--@endcan-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="col s12 m6">-->
-                    <!--<div class="card orange darken-3">-->
-                        <!--<div class="card-content white-text">-->
-                            <!--<span class="card-title">Dietas</span>-->
-                        <!--</div>-->
-                        <!--<div class="card-action">-->
-                            <!--@can('Dietas')-->
-                            <!--<a href="{{route('site.dietas')}}">Clique aqui</a>-->
-                            <!--@endcan-->
-                        <!--</div>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card red darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">Processos</span>
+                        </div>
+                        <div class="card-action">
+                            <a th:href="@{/process}">Clique aqui</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
