--- a/src/main/resources/templates/layouts/_scripts.html
+++ b/src/main/resources/templates/layouts/_scripts.html
@@ -5,5 +5,5 @@
     <script type="text/javascript" th:src="@{/js/jquery-validation-1.17.0/dist/additional-methods.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/utils.js}"></script>
     <script th:src="@{/js/doctor/form.js}"></script>
-    <script th:src="@{/js/doctor/index.js}"></script>
+    <!--<script th:src="@{/js/doctor/index.js}"></script>-->
 </html>
