--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -36,6 +36,19 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card red darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">Exames</span>
+                        </div>
+                        <div class="card-action">
+                            <a th:href="@{/exam}">Clique aqui</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </html>
