implementado filtro para ativo e inativo na tela de consulta de médicos, retirado o select de ativo e inativo no cadastro de medicos. Foi iniciado o cadastro de processos.

--- a/src/main/resources/templates/form_doctor.html
+++ b/src/main/resources/templates/form_doctor.html
@@ -17,15 +17,15 @@
             <!--<th:block th:include="message"></th:block>-->
             <form action="#" th:action="@{/doctor}" th:object="${doctor}" method="POST" id="form_doctor">
                 <input id="id" th:field="*{id}" type="hidden">
-                <div class="row">
-                    <div class="input-field col s2">
-                        <select id="active" th:field="*{active}" required>
-                            <option value="1" selected>Sim</option>
-                            <option value="0">Não</option>
-                        </select>
-                        <label for="active">Ativo</label>
-                    </div>
-                </div>
+                <!--<div class="row">-->
+                    <!--<div class="input-field col s2">-->
+                        <!--<select id="active" th:field="*{active}" required>-->
+                            <!--<option value="1" selected>Sim</option>-->
+                            <!--<option value="0">Não</option>-->
+                        <!--</select>-->
+                        <!--<label for="active">Ativo</label>-->
+                    <!--</div>-->
+                <!--</div>-->
                 <div class="row">
                     <div class="input-field col s6">
                         <input id="name" th:field="*{name}" type="text" required>
