--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,7 +25,7 @@
             </div>
             <div class="row">
                 <div class="col s12 m6">
-                    <div class="card red darken-1">
+                    <div class="card purple darken-1">
                         <div class="card-content white-text">
                             <span class="card-title">Processos</span>
                         </div>
@@ -34,9 +34,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-
-            <div class="row">
                 <div class="col s12 m6">
                     <div class="card red darken-1">
                         <div class="card-content white-text">
@@ -48,7 +45,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </html>
