--- a/src/main/resources/templates/index_process.html
+++ b/src/main/resources/templates/index_process.html
@@ -15,13 +15,17 @@
             </div>
             <div class="row">
                 <form th:action="@{/process}" method="get">
-                    <div class="input-field col s3">
-                        <input id="filtro_crm" name="filtro_crm" type="text" th:value="${filtro_crm}">
-                        <label for="filtro_crm">CRM</label>
+                    <div class="input-field col s2">
+                        <input id="filtro_codigo" name="filtro_codigo" type="text" th:value="${filtro_codigo}">
+                        <label for="filtro_codigo">Código</label>
                     </div>
-                    <div class="input-field col s7">
-                        <input id="filtro_name" name="filtro_name" type="text" th:value="${filtro_name}">
-                        <label for="filtro_name">Nome</label>
+                    <div class="input-field col s4">
+                        <input id="filtro_nome_paciente" name="filtro_nome_paciente" type="text" th:value="${filtro_nome_paciente}">
+                        <label for="filtro_nome_paciente">Nome Paciente</label>
+                    </div>
+                    <div class="input-field col s4">
+                        <input id="filtro_nome_medico" name="filtro_nome_medico" type="text" th:value="${filtro_nome_medico}">
+                        <label for="filtro_nome_medico">Nome Médico</label>
                     </div>
                     <div class="col s2">
                         <div class="row">
@@ -50,10 +54,10 @@
                     <td th:text="${process.doctor.getName()}"><span></span></td>
                     <td th:text="${process.patient.getName()}"><span></span></td>
                     <td>
-                        <!--<a class="btn-floating btn-small waves-effect waves-light blue tooltipped"-->
-                           <!--th:href="${(#mvc.url('DC#editDoctor').arg(0, doctor.id)).build()}" data-tooltip="Editar"><i class="material-icons">edit</i></a>-->
-                        <!--<a class="btn-floating btn-small waves-effect waves-light blue delete tooltipped"-->
-                           <!--th:data-url="${(#mvc.url('DC#deleteDoctor').arg(0, doctor.id)).build()}" data-tooltip="Excluir"><i class="material-icons">delete</i></a>-->
+                        <a class="btn-floating btn-small waves-effect waves-light blue tooltipped"
+                           th:href="${(#mvc.url('PC#editProcess').arg(0, process.id)).build()}" data-tooltip="Editar"><i class="material-icons">edit</i></a>
+                        <a class="btn-floating btn-small waves-effect waves-light blue delete tooltipped"
+                           th:data-url="${(#mvc.url('PC#deleteProcess').arg(0, process.id)).build()}" data-tooltip="Excluir"><i class="material-icons">delete</i></a>
                     </td>
                 </tr>
                 </tbody>
