--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -45,6 +45,42 @@
                     </div>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card brown darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">Procedimentos Médicos</span>
+                        </div>
+                        <div class="card-action">
+                            <a th:href="@{/medicalProcedure}">Clique aqui</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m6">
+                    <div class="card teal darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">Antecedentes Clinicos</span>
+                        </div>
+                        <div class="card-action">
+                            <a th:href="@{/background}">Clique aqui</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card blue-grey darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">Medicamentos</span>
+                        </div>
+                        <div class="card-action">
+                            <a th:href="@{/medicine}">Clique aqui</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </html>
