--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -68,7 +68,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col s12 m6">
                     <div class="card blue-grey darken-1">
@@ -77,6 +76,18 @@
                         </div>
                         <div class="card-action">
                             <a th:href="@{/medicine}">Clique aqui</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col s12 m6">
+                    <div class="card grey darken-1">
+                        <div class="card-content white-text">
+                            <span class="card-title">Relatórios</span>
+                        </div>
+                        <div class="card-action">
+                            <a th:href="@{/report}">Clique aqui</a>
                         </div>
                     </div>
                 </div>
