Correção do modelo de consulta, finalização da implementação do relatório de pacientes

--- a/src/main/resources/templates/form_patient-report.html
+++ b/src/main/resources/templates/form_patient-report.html
@@ -18,7 +18,7 @@
                 <form method="post" th:object="${filter}">
                     <div class="input-field col s7">
                         <select th:field="*{doctor}">
-                            <option value="" disabled>Selecione o médico</option>
+                            <option th:value="${null}">Nenhum</option>
                             <option th:each="doctor : ${doctors}" th:value="${{doctor}}"
                                     th:text="${doctor.name}">
                             </option>
