--- a/src/main/resources/templates/report_patient-report.html
+++ b/src/main/resources/templates/report_patient-report.html
@@ -21,14 +21,14 @@
             display: block;
         }
 
-        .field > span:nth-child(1) {
+        tr > th {
             color: #0D47A1;
             font-family: Calibri;
             font-weight: bold;
             font-size: 20px;
         }
 
-        .field > span:nth-child(2) {
+        tr > td {
             color: black;
             font-family: Times;
             font-size: 28px;
@@ -49,7 +49,7 @@
     <tbody>
     <tr th:each="appointment : ${appointments}">
         <td><span th:text="${appointment.patient.name + ' ' + appointment.patient.surname}"></span></td>
-        <td><span th:text="${appointment.date}"></span></td>
+        <td><span th:text="${#temporals.format(appointment.date, 'dd/MM/yyyy HH:mm:ss')}"></span></td>
     </tr>
     </tbody>
 </table>
