tentativa de implementação de calendario para consulta

--- a/src/main/resources/templates/index_consult.html
+++ b/src/main/resources/templates/index_consult.html
@@ -1,6 +1,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
+
     <div th:fragment="corpo">
+
     <div class="container">
+        <div id='calendar'></div>
         <div class="row">
             <h2 class="center">Consultas Médicas</h2>
             <div class="row">
