--- a/src/main/resources/templates/layouts/_css.html
+++ b/src/main/resources/templates/layouts/_css.html
@@ -2,4 +2,5 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link type="text/css" rel="stylesheet" th:href="@{/css/materialize.min.css}" media="screen,projection"/>
     <link type="text/css" rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link type="text/css" rel='stylesheet' th:href="@{/css/fullcalendar/fullcalendar.css}"  />
 </html>
