--- a/src/main/resources/templates/layouts/_header.html
+++ b/src/main/resources/templates/layouts/_header.html
@@ -1,4 +1,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+$(function() {
+
+// page is now ready, initialize the calendar...
+
+$('#calendar').fullCalendar({
+// put your options and callbacks here
+})
+
+});
 <nav>
     <div class="nav-wrapper blue">
         <div class="container">
