--- a/src/main/resources/templates/layouts/_scripts.html
+++ b/src/main/resources/templates/layouts/_scripts.html
@@ -6,4 +6,8 @@
     <script type="text/javascript" th:src="@{/js/utils.js}"></script>
     <script th:src="@{/js/doctor/form.js}"></script>
     <script th:src="@{/js/doctor/index.js}"></script>
+
+    <script type="text/javascript" th:src="@{/js/lib/jquery.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/moment.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/lib/fullcalendar/fullcalendar.js}"></script>
 </html>
