--- a/src/main/resources/templates/layouts/_scripts.html
+++ b/src/main/resources/templates/layouts/_scripts.html
@@ -3,6 +3,7 @@
     <script type="text/javascript" th:src="@{/js/materialize.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/jquery-validation-1.17.0/dist/jquery.validate.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/jquery-validation-1.17.0/dist/additional-methods.min.js}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
     <script type="text/javascript" th:src="@{/js/utils.js}"></script>
     <script th:src="@{/js/doctor/form.js}"></script>
     <script th:src="@{/js/doctor/index.js}"></script>
